tests/ui/type-alias-impl-trait/method_resolution3.current.stderr
error[E0307]: invalid `self` parameter type: `Bar<u32>`
  --> $DIR/method_resolution3.rs:16:18
   |
LL |     fn bar(self: Bar<u32>) {
   |                  ^^^^^^^^
   |
   = note: type of `self` must be `Self` or a type that dereferences to it
   = help: consider changing to `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`)

error[E0307]: invalid `self` parameter type: `&Bar<u32>`
  --> $DIR/method_resolution3.rs:21:18
   |
LL |     fn baz(self: &Bar<u32>) {
   |                  ^^^^^^^^^
   |
   = note: type of `self` must be `Self` or a type that dereferences to it
   = help: consider changing to `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0307`.
